immediate->imperative rename (part 3)

--- a/tensorflow/contrib/imperative/BUILD
+++ b/tensorflow/contrib/imperative/BUILD
@@ -1,5 +1,5 @@
 # Description:
-#   Contains implementation of immediate execution in TensorFlow
+#   Contains implementation of imperative mode in TensorFlow
 #   APIs here are meant to evolve over time.
 
 licenses(["notice"])  # Apache 2.0
@@ -9,15 +9,15 @@ exports_files(["LICENSE"])
 package(default_visibility = ["//tensorflow:__subpackages__"])
 
 py_library(
-    name = "immediate_py",
+    name = "imperative_py",
     srcs = [
          "__init__.py",
-         "python/immediate/env.py",
-         "python/immediate/itensor.py",
-         "python/immediate/module_rewriter.py",
-         "python/immediate/op.py",
-         "python/immediate/test_util.py",
-         "python/immediate/util.py",
+         "python/imperative/env.py",
+         "python/imperative/itensor.py",
+         "python/imperative/module_rewriter.py",
+         "python/imperative/op.py",
+         "python/imperative/test_util.py",
+         "python/imperative/util.py",
     ],
     srcs_version = "PY2AND3",
     deps = [
@@ -30,7 +30,7 @@ py_library(
 )
 
 py_library(
-    name = "immediate_test_lib",
+    name = "imperative_test_lib",
     srcs = [],
     srcs_version = "PY2AND3",
     deps = [
@@ -41,18 +41,18 @@ py_library(
         "//tensorflow/python:session",
         "//tensorflow/python:util",
         "//tensorflow:tensorflow_py",
-        ":immediate_py",
+        ":imperative_py",
     ],
 )
 
 py_test(
     name = "env_test",
     size = "small",
-    srcs = ["python/immediate/env_test.py"],
+    srcs = ["python/imperative/env_test.py"],
     srcs_version = "PY2AND3",
     deps = [
-        ":immediate_py",
-	":immediate_test_lib",
+        ":imperative_py",
+	":imperative_test_lib",
         "//tensorflow:tensorflow_py",
     ],
 )
@@ -60,11 +60,11 @@ py_test(
 py_test(
     name = "env_cache_test",
     size = "small",
-    srcs = ["python/immediate/env_cache_test.py"],
+    srcs = ["python/imperative/env_cache_test.py"],
     srcs_version = "PY2AND3",
     deps = [
-        ":immediate_py",
-	":immediate_test_lib",
+        ":imperative_py",
+	":imperative_test_lib",
         "//tensorflow:tensorflow_py",
     ],
 )
@@ -72,11 +72,11 @@ py_test(
 py_test(
     name = "module_rewriter_test",
     size = "small",
-    srcs = ["python/immediate/module_rewriter_test.py"],
+    srcs = ["python/imperative/module_rewriter_test.py"],
     srcs_version = "PY2AND3",
     deps = [
-        ":immediate_py",
-        ":immediate_test_lib",
+        ":imperative_py",
+        ":imperative_test_lib",
         "//tensorflow:tensorflow_py",
     ],
 )
@@ -84,11 +84,11 @@ py_test(
 py_test(
     name = "itensor_test",
     size = "small",
-    srcs = ["python/immediate/itensor_test.py"],
+    srcs = ["python/imperative/itensor_test.py"],
     srcs_version = "PY2AND3",
     deps = [
-        ":immediate_py",
-        ":immediate_test_lib",
+        ":imperative_py",
+        ":imperative_test_lib",
         "//tensorflow:tensorflow_py",
     ],
 )
@@ -96,11 +96,11 @@ py_test(
 py_test(
     name = "tensor_handle_test",
     size = "small",
-    srcs = ["python/immediate/tensor_handle_test.py"],
+    srcs = ["python/imperative/tensor_handle_test.py"],
     srcs_version = "PY2AND3",
     deps = [
-        ":immediate_py",
-	":immediate_test_lib",
+        ":imperative_py",
+	":imperative_test_lib",
         "//tensorflow:tensorflow_py",
         "//tensorflow/python:framework_test_lib",
         "//tensorflow/python:platform_test",
@@ -109,12 +109,12 @@ py_test(
 
 py_test(
     name = "math_ops_test",
-    srcs = ["python/immediate/extra_tests/math_ops_test.py"],
+    srcs = ["python/imperative/extra_tests/math_ops_test.py"],
     size = "small",
     srcs_version = "PY2AND3",
     deps = [
-           ":immediate_py",
-           ":immediate_test_lib",
+           ":imperative_py",
+           ":imperative_test_lib",
            "//tensorflow/python:extra_py_tests_deps",
            "//tensorflow/python:framework_test_lib",
 #           "//tensorflow/python:kernel_tests/gradient_checker",
@@ -125,12 +125,12 @@ py_test(
 
 py_test(
     name = "batchnorm_test",
-    srcs = ["python/immediate/extra_tests/batchnorm_test.py"],
+    srcs = ["python/imperative/extra_tests/batchnorm_test.py"],
     size = "medium",
     srcs_version = "PY2AND3",
     deps = [
-           ":immediate_py",
-           ":immediate_test_lib",
+           ":imperative_py",
+           ":imperative_test_lib",
            "//tensorflow/python:extra_py_tests_deps",
            "//tensorflow/python:framework_test_lib",
 #           "//tensorflow/python:kernel_tests/gradient_checker",
@@ -142,12 +142,12 @@ py_test(
 # TODO(yaroslavvb): uncomment once all "with_devices" tests are removed
 # py_test(
 #     name = "image_ops_test",
-#     srcs = ["python/immediate/extra_tests/image_ops_test.py"],
+#     srcs = ["python/imperative/extra_tests/image_ops_test.py"],
 #     size = "medium",
 #     srcs_version = "PY2AND3",
 #     deps = [
-#            ":immediate_py",
-#            ":immediate_test_lib",
+#            ":imperative_py",
+#            ":imperative_test_lib",
 #            "//tensorflow:tensorflow_py",
 #     ],
 
@@ -159,12 +159,12 @@ py_test(
 # NOTE(yaroslavvb): uncomment once image_ops stabilizes
 # py_test(
 #     name = "image_ops_double_test",
-#     srcs = ["python/immediate/extra_tests/image_ops_double_test.py"],
+#     srcs = ["python/imperative/extra_tests/image_ops_double_test.py"],
 #     size = "medium",
 #     srcs_version = "PY2AND3",
 #     deps = [
-#            ":immediate_py",
-#            ":immediate_test_lib",
+#            ":imperative_py",
+#            ":imperative_test_lib",
 #            "//tensorflow:tensorflow_py",
 #     ],
 
@@ -175,12 +175,12 @@ py_test(
 
 py_test(
     name = "histogram_ops_test",
-    srcs = ["python/immediate/extra_tests/histogram_ops_test.py"],
+    srcs = ["python/imperative/extra_tests/histogram_ops_test.py"],
     size = "medium",
     srcs_version = "PY2AND3",
     deps = [
-           ":immediate_py",
-           ":immediate_test_lib",
+           ":imperative_py",
+           ":imperative_test_lib",
            "//tensorflow:tensorflow_py",
            "//tensorflow/python:framework_test_lib",
            "//tensorflow/python:platform_test",
@@ -193,12 +193,12 @@ py_test(
 
 py_test(
     name = "nn_test",
-    srcs = ["python/immediate/extra_tests/nn_test.py"],
+    srcs = ["python/imperative/extra_tests/nn_test.py"],
     size = "small",
     srcs_version = "PY2AND3",
     deps = [
-           ":immediate_py",
-           ":immediate_test_lib",
+           ":imperative_py",
+           ":imperative_test_lib",
            "//tensorflow:tensorflow_py",
            "//tensorflow/python:framework_test_lib",
            "//tensorflow/python:platform_test",
@@ -209,12 +209,12 @@ py_test(
 
 py_test(
     name = "mnist_inference_test",
-    srcs = ["python/immediate/mnist_inference_test.py"],
+    srcs = ["python/imperative/mnist_inference_test.py"],
     size = "medium",
     srcs_version = "PY2AND3",
     deps = [
-           ":immediate_py",
-           ":immediate_test_lib",
+           ":imperative_py",
+           ":imperative_test_lib",
            "//tensorflow:tensorflow_py",
            "//tensorflow/models/image/mnist:convolutional",
     ],
@@ -226,12 +226,12 @@ py_test(
 
 py_test(
     name = "lbfgs_test",
-    srcs = ["python/immediate/lbfgs_test.py"],
+    srcs = ["python/imperative/lbfgs_test.py"],
     size = "medium",
     srcs_version = "PY2AND3",
     deps = [
-           ":immediate_py",
-           ":immediate_test_lib",
+           ":imperative_py",
+           ":imperative_test_lib",
            "//tensorflow:tensorflow_py",
     ],
 
@@ -243,13 +243,13 @@ py_test(
 filegroup(
     name = "mnist_testdata",
     srcs = [
-    	"python/immediate/testdata/checkpoint",
-	"python/immediate/testdata/convolutional-0",
-	"python/immediate/testdata/convolutional-0.meta",
-	"python/immediate/testdata/t10k-images-idx3-ubyte.gz",
-        "python/immediate/testdata/t10k-labels-idx1-ubyte.gz",
-	"python/immediate/testdata/mnist_data_32x32_small.npy",
-        "python/immediate/testdata/mnist_labels_small.npy",
+    	"python/imperative/testdata/checkpoint",
+	"python/imperative/testdata/convolutional-0",
+	"python/imperative/testdata/convolutional-0.meta",
+	"python/imperative/testdata/t10k-images-idx3-ubyte.gz",
+        "python/imperative/testdata/t10k-labels-idx1-ubyte.gz",
+	"python/imperative/testdata/mnist_data_32x32_small.npy",
+        "python/imperative/testdata/mnist_labels_small.npy",
     ],
 )
 
